--- a/rock monsters/style.css
+++ b/rock monsters/style.css
@@ -49,12 +49,21 @@ span.x4:before, i.x4:before
 
 header .container-fluid
 {
+    
+    height: auto;
+    padding-top: 36px;
+    overflow: hidden;
+}
+
+header {
+    position: relative;
+    height: 600px;
+    width: 100%;
     background-image: url('http://www.aria.ru/var/files/b/586cb0a6ddba38.47317474');
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 0 -150px;
-    height: 100vh;
-    padding-top: 36px;
+    background-size: 100%;
+    background-position: center center;
+    overflow: hidden;
 }
 
 .hamburger
@@ -101,7 +110,21 @@ header .container-fluid
     color: #FFFFFF;
     margin-bottom: 5%;
 }
+.shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
+    background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
+    background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
+    background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.5) 75%);
+}
+/*preloader*/
 
+
+/*end preloader*/
 
 /*------------------------------------*\
 	SECTIONS
@@ -169,8 +192,8 @@ header .container-fluid
     background: url(https://s-media-cache-ak0.pinimg.com/originals/08/14/4f/08144f199f6e7b9a180b2beafab07444.jpg) no-repeat center top fixed;
     background-size: cover;
     background: linear-gradient(
-      rgba(33, 37, 43, 0.6),
-      rgba(33, 37, 43, 0.6)
+      rgba(33, 37, 43, 0.8),
+      rgba(33, 37, 43, 0.8)
     ),
 
     
